kubernetes/market-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-service-deployment
  namespace: spring-stocks
  labels:
    app: market-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: market-service
  template:
    metadata:
      labels:
        app: market-service
    spec:
      containers:
        - name: market-service
          image: dmfrey/market-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
