kubernetes/market-service-db-config.yml
---
apiVersion: v1
kind: Service
metadata:
  name: market-service-db
  namespace: spring-stocks
  labels:
    app: markdet-service
spec:
  selector:
    app: market-service-db
    tier: mysql
  ports:
    - port: 3306
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-service-db
  namespace: spring-stocks
  labels:
    app: market-service-db
spec:
  selector:
    matchLabels:
      app: market-service-db
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: market-service-db
        tier: mysql
    spec:
      containers:
        - image: mysql/mysql-server
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
          - name: market-service-mysql-persistent-storage
            mountPath: /var/lib/mysql
          - name: market-service-mysql-config-volume
            mountPath: /etc/mysql/conf.d/default_auth.cnf
            subPath: default_auth
      volumes:
        - name: market-service-mysql-persistent-storage
          persistentVolumeClaim:
            claimName: market-service-mysql-pv-claim
        - name: market-service-mysql-config-volume
          configMap:
            name: market-service-mysql-config
