kubernetes/market-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: market-service
spec:
  selector:
    app: market-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
