kubernetes/postgres-db-config.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: db-test
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  type: LoadBalancer
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: db-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:10.4
          ports:
            - containerPort: 5432
          volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgres-persistent-storage
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
