kubernetes/spring-stocks-gateway-deployment.yml
#---
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: spring-stocks-gateway-ingress
#  namespace: spring-stocks
#spec:
#  rules:
#    - host: spring-stocks.info
#      http:
#        paths:
#          - path: /
#            backend:
#              serviceName: spring-stocks-gateway
#              servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-stocks-gateway
  namespace: spring-stocks
spec:
  type: LoadBalancer
  selector:
    app: spring-stocks-gateway
  ports:
    - port: 8765
      targetPort: 8765
      name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-stocks-gateway-deployment
  namespace: spring-stocks
  labels:
    app: spring-stocks-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-stocks-gateway
  template:
    metadata:
      labels:
        app: spring-stocks-gateway
    spec:
      serviceAccountName: spring-stocks
      containers:
        - name: spring-stocks-gateway
          image: dmfrey/spring-stocks-gateway
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
          volumeMounts:
            - name: wavefront-freemium
              mountPath: ./wavefront_freemium
      volumes:
        - name: wavefront-freemium
          secret:
            secretName: wavefront-secret
            items:
              - key: api-token
                path: api-token
