kubernetes/stock-service-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: stock-service
  namespace: spring-stocks
spec:
  selector:
    app: stock-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-service-deployment
  namespace: spring-stocks
  labels:
    app: stock-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-service
  template:
    metadata:
      labels:
        app: stock-service
    spec:
      serviceAccountName: spring-stocks
      containers:
        - name: stock-service
          image: dmfrey/stock-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 180
            periodSeconds: 60
          volumeMounts:
            - name: wavefront-freemium
              mountPath: ./wavefront_freemium
      volumes:
        - name: wavefront-freemium
          secret:
            secretName: wavefront-secret
            items:
              - key: api-token
                path: api-token
