kubernetes/spring-stocks-deployment.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: spring-stocks-ingress
  namespace: spring-stocks
spec:
  rules:
    - host: spring-stocks.info
      http:
        paths:
          - path: /
            backend:
              serviceName: spring-stocks
              servicePort: 8765
---
apiVersion: v1
kind: Service
metadata:
  name: spring-stocks
  namespace: spring-stocks
spec:
  type: NodePort
  selector:
    app: spring-stocks
  ports:
    - port: 8765
      nodePort: 32675
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: stock-service
  namespace: spring-stocks
spec:
  selector:
    app: spring-stocks
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: market-service
  namespace: spring-stocks
spec:
  selector:
    app: spring-stocks
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-stocks-deployment
  namespace: spring-stocks
  labels:
    app: spring-stocks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-stocks
  template:
    metadata:
      labels:
        app: spring-stocks
    spec:
      containers:
        - name: spring-stocks-gateway
          image: dmfrey/spring-stocks-gateway
          imagePullPolicy: Always
          ports:
            - containerPort: 8765
        - name: stock-service
          image: dmfrey/stock-service
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
        - name: market-service
          image: dmfrey/market-service
          imagePullPolicy: Always
          ports:
            - containerPort: 9081
